Fixed button alignment

--- a/style.css
+++ b/style.css
@@ -325,6 +325,7 @@ h4{
     font-size: 1.5rem;
     box-shadow: 3px 2px var(--background3);
     margin-right: 1rem;
+    text-align: center;
 }
 .control-stick{
     background: radial-gradient(var(--background2) 1.15rem, var(--background3) 1.3rem, var(--background2) 1.45rem);
@@ -343,6 +344,7 @@ h4{
     min-width: 1.5rem;
     box-shadow: 3px 2px var(--background3);
     margin-right: 1rem;
+    text-align: center;
 }
 .row p{
     display: inline-block;
